--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ style
 
 <head>
     <title>Thomas Johander Resume</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
   <body>
   	<h1>Thomas Johander</h1>
