--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ style
       </ul>
 
   <h2>Relevant Work Experience</h2>
-  <h3>Avtex Solutions, LLC.  Bloomington, MN</h3>
+    <h3><a href="http://www.avtex.com">Avtex Solutions, LLC.  Bloomington, MN</a></h3>
   <h4> Strategic Account Support Engineer, Level II (April 2014 to Present)</h4>
   <ul>
   <li>Dedicated support engineer for 1000+ user Customer Interaction Center platform</li>
@@ -47,10 +47,10 @@ style
   <ul><li>Created sales proposals for Microsoft and Interactive Intelligence products and consulting services</li><li>Executed national sales and marketing presentation with an emphasis on technical sales demonstrations.</li><li>Improved overall Pre-Sales workflow process using Microsoft Dynamics CRM, Microsoft SharePoint and Contract Express Deal Builder contract management platform</li></ul>
   <h4>Managed Services Technical Engineer, (June 2011 to March 2013)</h4>
   <ul><li>First point of contact for Managed Services customer support requests.</li><li>Triage and resolution of diverse support requests, up to and including Tier 2 level Windows 7, XP, Server 2003, 2008, 2008 R2 support.</li><li>Tier 1 Microsoft Dynamics CRM platform support specialist.</li><li>Move/Add/Change duties for Microsoft Active Directory, Exchange 2007 and 2010 for over 1,000 users.</li></ul>
-<h3>PCs for People. St. Paul, MN</h3>
+    <h3><a href="http://http://www.pcsforpeople.com/">PCs for People. St. Paul, MN</a></h3>
 <h4>Volunteer PC Refurbish Technician. (March 2011 to June 2011)</h4>
   <ul><li>Diagnose and repair wide range of PC hardware issues and refurbishment tasks.</li><li> Assisted with building donor relationships, via phone and email, with a wide range of organizations.</li></ul>
-  <h3>The Canadian Traffic Network, Vancouver BC</h3>
+    <h3><a href="http://http://www.trafficnet.ca/en/">The Canadian Traffic Network, Vancouver BC</a></h3>
 <h4>Director of Operations, Vancouver, (October 2008 to June 2009.)</h4>
 <ul><li>Responsible for production of live, airborne traffic reports for radio and TV stations.</li><li>Oversaw design and construction of 2,000 sq. foot office space. Implemented telecommunications
 infrastructure.</li><li>Directed the activities of 1 helicopter, 2 pilots and 5 ground staff.</li><li>Point person in working with managed IT services provider in troubleshooting Windows XP-based small office network.</li></ul>
