--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ infrastructure.</li><li>Directed the activities of 1 helicopter, 2 pilots and 5 
 <ul><li> Project manager for development of a web-based road traffic data reporting system.</li><li>Created workflow to digitally catalog competitors' air traffic reports using audio capture software and Microsoft SharePoint.</li></ul>
 <h4>Operations Finance Manager, (March 2008 to June 2009)</h4>
 <ul><li>Approved all operational expenditures among 288 vendors and 7 offices</li><li>Custom-built and maintained Access 2007 database to track invoice details, accounts payable, to track flight activity of 7 helicopters in 5 cities.</li><li>Created budget projections for $1 million aviation budget, resulting in 98% accuracy.</li></ul>
-<h4>Affiliate Relations, (June 2006 -- June 2009.)</h4>
+<h4>Affiliate Relations, (June 2006 to June 2009.)</h4>
 <ul><li>Communicated daily with 5 broadcast affiliates' news departments and management to coordinate breaking news story coverage</li></ul>
 
 
