--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@ infrastructure.</li><li>Directed the activities of 1 helicopter, 2 pilots and 5 
   <h2>Education and Certifications</h2>
    <ul>
     <li>Bachelor of Arts, International Affairs<a href="http://www.colorado.edu"> University of Colorado at Boulder,</a> <a href="https://www.google.com/maps/place/University+of+Colorado+Boulder/@40.0146619,-105.2937522,13.5z/data=!4m5!3m4!1s0x876bec346a9c1ec1:0x328d5a4a8f431d9!8m2!3d40.007581!4d-105.2659417">  Boulder, CO.</a></li>
-    <li> <a href="http://http://www.cjs.keio.ac.jp/?page=&lang=en"> Keio University, Japanese Language Program, Tokyo, Japan. Fall 2002-Summer 2003.</a></li>
+    <li> <a href="http://http://www.cjs.keio.ac.jp/?page=&lang=en"> Keio University, Japanese Language Program,</a> <a href="https://www.google.com/maps/place/Keio+University/@35.6489686,139.7407489,17z/data=!3m1!4b1!4m5!3m4!1s0x60188bb019af22ef:0x5df1bbe84d05a9d4!8m2!3d35.6489643!4d139.7429376">Tokyo, Japan. Fall 2002-Summer 2003.</a></li>
     <li><a href="http://www.cisco.com/c/en/us/training-events/training-certifications/certifications/entry/ccent.html">Cisco Systems Certified Entry Level Networking Technician</a></li>
-    <li>Interaction Center Certified Engineer (ICCE)</li>
-    <li>Interaction Center Dialer Engineer (ICDE)</li>
-    <li>SIP School Certified Associate (SSCA)</li>
-    <li>Toastmasters International, Techmasters chapter, Minneapolis, MN</li>
+    <li><a href="https://www.inin.com/education/courses/interaction-center-certified-engineer-icce-bootcamp">Interaction Center Certified Engineer (ICCE)</a></li>
+    <li><a href ="https://www.inin.com/education/courses/interaction-dialer-certified-engineer-idce-training">Interaction Center Dialer Engineer (ICDE)</a></li>
+    <li><a href="https://www.thesipschool.com/">SIP School Certified Associate (SSCA)</a></li>
+    <li><a href="http://http://www.toastmasters.org">Toastmasters International, Techmasters chapter, Minneapolis, MN</a></li>
     </ul>
 
 
