--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <a href mailto:tjohander@gmail.com>tjohander (at) gmail.com</a>
     <br>
     952.412.9195
+        <a href="https://www.linkedin.com/pub/thomas-johander/b/9b5/6a4">
+      
+          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Thomas Johander's profile on LinkedIn">
+        
+    </a>
 
     <h2>Objective</h2>
     <p>Pursuing admission into Prime Academy coding school</p>
