--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
 <style>
+    
+.parallax { 
+    /* The image used */
+    background-image: url("headshot.jpg");
+
+    /* Set a specific height */
+    height: 500px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+</style>
+
+<!-- Container element -->
+<div class="parallax"></div>
 </style>
 <head>
     <title>Thomas Johander Resume</title>
