--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     background-image: url("headshot.jpg");
 
     /* Set a specific height */
-    height: 250px; 
+    height: 500px; 
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 750px;
 }
 </style>
 
