--- a/index.html
+++ b/index.html
@@ -1,46 +1,37 @@
 <!DOCTYPE html>
 <html>
-<style>
-    
-.parallax { 
-    /* The image used */
-    background-image: url("headshot.jpg");
-
-    /* Set a specific height */
-    height: 500px; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: 600px;
-}
-</style>
-
-<!-- Container element -->
-<div class="parallax"></div>
-</style>
 <head>
     <title>Thomas Johander Resume</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
-  <body>
+
+<div id="parallax">
+</div>
+
+<section id="logistics">
+  <header>
   	<h1>Thomas Johander</h1>
-      <hr>
-    <p>2841 Colfax Avenue South, Minneapolis, MN 55408
-    <br>
-    <a href mailto:tjohander@gmail.com>tjohander (at) gmail.com</a>
-    <br>
-    952.412.9195
-    <br>
-    <a href="https://www.linkedin.com/pub/thomas-johander/b/9b5/6a4">
-          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Thomas Johander's profile on LinkedIn">
-    </a>
+  </header>
+    <ul>
+      <li>2841 Colfax Avenue South, Minneapolis, MN 55408</li>
+      <li><a href mailto:tjohander@gmail.com>tjohander (at) gmail.com</a><li>
+      <li>952.412.9195</li>
+      <li><a href="https://www.linkedin.com/pub/thomas-johander/b/9b5/6a4">
+          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Thomas Johander's profile on LinkedIn"></li></a>
 
+  </ul>
+
+<section id="objective">
+  <header>
     <h2>Objective</h2>
+  </header>
     <p>Pursuing admission into Prime Academy coding school</p>
+  </section>
 
-    <h2>Summary of Skills</h2>
+<section id="skills-summary">
+    <header>
+      <h2>Summary of Skills</h2>
+    </header>
     <ul>
       <li>Experieced IT professional with solid foundational knowledge in networking,
       voice of IP (VoIP) and system administration skills.</li>
@@ -50,7 +41,9 @@
       <li>Consistently scored in 97th percentile in Customer Satisfaction surveys.</li>
       <li>Tier 1 & 2 Windows server and desktop support.</li>
       </ul>
+</section>
 
+<section id="relevant-work-experience">
   <h2>Relevant Work Experience</h2>
     <h3><a href="http://www.avtex.com">Avtex Solutions, LLC.  Bloomington, MN</a></h3>
   <h4> Strategic Account Support Engineer, Level II (April 2014 to Present)</h4>
@@ -76,12 +69,12 @@ infrastructure.</li><li>Directed the activities of 1 helicopter, 2 pilots and 5 
 <ul><li>Approved all operational expenditures among 288 vendors and 7 offices</li><li>Custom-built and maintained Access 2007 database to track invoice details, accounts payable, to track flight activity of 7 helicopters in 5 cities.</li><li>Created budget projections for $1 million aviation budget, resulting in 98% accuracy.</li></ul>
 <h4>Affiliate Relations, (June 2006 to June 2009.)</h4>
 <ul><li>Communicated daily with 5 broadcast affiliates' news departments and management to coordinate breaking news story coverage</li></ul>
+</secion>
 
 
 
 
-
-
+<section>
   <h2>Education and Certifications</h2>
    <ul>
     <li>Bachelor of Arts, International Affairs<a href="http://www.colorado.edu"> University of Colorado at Boulder,</a> <a href="https://www.google.com/maps/place/University+of+Colorado+Boulder/@40.0146619,-105.2937522,13.5z/data=!4m5!3m4!1s0x876bec346a9c1ec1:0x328d5a4a8f431d9!8m2!3d40.007581!4d-105.2659417">  Boulder, CO.</a></li>
@@ -92,7 +85,7 @@ infrastructure.</li><li>Directed the activities of 1 helicopter, 2 pilots and 5 
     <li><a href="https://www.thesipschool.com/">SIP School Certified Associate (SSCA)</a></li>
     <li><a href="http://http://www.toastmasters.org">Toastmasters International, Techmasters chapter, Minneapolis, MN</a></li>
     </ul>
-
+</section>
 
 
   </body>
