--- a/index.html
+++ b/index.html
@@ -5,28 +5,24 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 
-<div id="parallax">
-</div>
+<div id="parallax"></div>
 
-<section id="logistics">
-  <header>
-  	<h1>Thomas Johander</h1>
-  </header>
+<section id="contact-info">
+    	<h1>Thomas Johander</h1>
     <ul>
       <li>2841 Colfax Avenue South, Minneapolis, MN 55408</li>
-      <li><a href mailto:tjohander@gmail.com>tjohander (at) gmail.com</a><li>
+      <li><a href mailto:tjohander@gmail.com>tjohander (at) gmail.com</a></li>
       <li>952.412.9195</li>
-      <li><a href="https://www.linkedin.com/pub/thomas-johander/b/9b5/6a4">
-          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Thomas Johander's profile on LinkedIn"></li></a>
-
-  </ul>
+      <li><a href="https://www.linkedin.com/pub/thomas-johander/b/9b5/6a4"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Thomas Johander's profile on LinkedIn"></li></a>
+    </ul>
+</section>
 
 <section id="objective">
   <header>
     <h2>Objective</h2>
   </header>
     <p>Pursuing admission into Prime Academy coding school</p>
-  </section>
+</section>
 
 <section id="skills-summary">
     <header>
@@ -45,36 +41,70 @@
 
 <section id="relevant-work-experience">
   <h2>Relevant Work Experience</h2>
-    <h3><a href="http://www.avtex.com">Avtex Solutions, LLC.  Bloomington, MN</a></h3>
+
+  <h3><a href="http://www.avtex.com">Avtex Solutions, LLC.  Bloomington, MN</a></h3>
+
   <h4> Strategic Account Support Engineer, Level II (April 2014 to Present)</h4>
+
   <ul>
-  <li>Dedicated support engineer for 1000+ user Customer Interaction Center platform</li>
-  <li>Responsible for Tier 2 triage and troubleshooting of enterprise-grade contact center platform.</li>
-  <li>Provide guidance on Best Practices for expansion of footprint to 5 remote sites throughout Wisconsin</li>
-  <li>Certified Engineer on both the base platform and the Auto-Dialer modules.</li></ul>
+    <li>Dedicated support engineer for 1000+ user Customer Interaction Center platform</li>
+    <li>Responsible for Tier 2 triage and troubleshooting of enterprise-grade contact center platform.</li>
+    <li>Provide guidance on Best Practices for expansion of footprint to 5 remote sites throughout Wisconsin</li>
+    <li>Certified Engineer on both the base platform and the Auto-Dialer modules.</li>
+  </ul>
+
   <h4>Associate Sales Engineer, (March 2013 to April 2014)</h4>
-  <ul><li>Created sales proposals for Microsoft and Interactive Intelligence products and consulting services</li><li>Executed national sales and marketing presentation with an emphasis on technical sales demonstrations.</li><li>Improved overall Pre-Sales workflow process using Microsoft Dynamics CRM, Microsoft SharePoint and Contract Express Deal Builder contract management platform</li></ul>
+
+  <ul>
+    <li>Created sales proposals for Microsoft and Interactive Intelligence products and consulting services</li>
+    <li>Executed national sales and marketing presentation with an emphasis on technical sales demonstrations.</li>
+    <li>Improved overall Pre-Sales workflow process using Microsoft Dynamics CRM, Microsoft SharePoint and Contract Express Deal Builder contract management platform</li>
+  </ul>
+
   <h4>Managed Services Technical Engineer, (June 2011 to March 2013)</h4>
-  <ul><li>First point of contact for Managed Services customer support requests.</li><li>Triage and resolution of diverse support requests, up to and including Tier 2 level Windows 7, XP, Server 2003, 2008, 2008 R2 support.</li><li>Tier 1 Microsoft Dynamics CRM platform support specialist.</li><li>Move/Add/Change duties for Microsoft Active Directory, Exchange 2007 and 2010 for over 1,000 users.</li></ul>
-    <h3><a href="http://http://www.pcsforpeople.com/">PCs for People. St. Paul, MN</a></h3>
-<h4>Volunteer PC Refurbish Technician. (March 2011 to June 2011)</h4>
-  <ul><li>Diagnose and repair wide range of PC hardware issues and refurbishment tasks.</li><li> Assisted with building donor relationships, via phone and email, with a wide range of organizations.</li></ul>
+  <ul>
+    <li>First point of contact for Managed Services customer support requests.</li>
+    <li>Triage and resolution of diverse support requests, up to and including Tier 2 level Windows 7, XP, Server 2003, 2008, 2008 R2 support.</li><li>Tier 1 Microsoft Dynamics CRM platform support specialist.</li><li>Move/Add/Change duties for Microsoft Active Directory, Exchange 2007 and 2010 for over 1,000 users.</li>
+  </ul>
+
+  <h3><a href="http://http://www.pcsforpeople.com/">PCs for People. St. Paul, MN</a></h3>
+  <h4>Volunteer PC Refurbish Technician. (March 2011 to June 2011)</h4>
+
+  <ul>
+    <li>Diagnose and repair wide range of PC hardware issues and refurbishment tasks.</li><li> Assisted with building donor relationships, via phone and email, with a wide range of organizations.</li>
+  </ul>
+
     <h3><a href="http://http://www.trafficnet.ca/en/">The Canadian Traffic Network, Vancouver BC</a></h3>
-<h4>Director of Operations, Vancouver, (October 2008 to June 2009.)</h4>
-<ul><li>Responsible for production of live, airborne traffic reports for radio and TV stations.</li><li>Oversaw design and construction of 2,000 sq. foot office space. Implemented telecommunications
-infrastructure.</li><li>Directed the activities of 1 helicopter, 2 pilots and 5 ground staff.</li><li>Point person in working with managed IT services provider in troubleshooting Windows XP-based small office network.</li></ul>
+
+<h4>Director of Operations, Vancouver, (October 2008 to June 2009)</h4>
+
+<ul>
+  <li>Responsible for production of live, airborne traffic reports for radio and TV stations.</li><li>Oversaw design and construction of 2,000 sq. foot office space. Implemented telecommunications
+      infrastructure.</li>
+  <li>Directed the activities of 1 helicopter, 2 pilots and 5 ground staff.</li>
+  <li>Point person in working with managed IT services provider in troubleshooting Windows XP-based small office network.</li>
+</ul>
+
 <h4>Digital Projects Team, (July 2008 to June 2009)</h4>
-<ul><li> Project manager for development of a web-based road traffic data reporting system.</li><li>Created workflow to digitally catalog competitors' air traffic reports using audio capture software and Microsoft SharePoint.</li></ul>
+
+<ul>
+  <li> Project manager for development of a web-based road traffic data reporting system.</li><li>Created workflow to digitally catalog competitors' air traffic reports using audio capture software and Microsoft SharePoint.</li>
+</ul>
+
 <h4>Operations Finance Manager, (March 2008 to June 2009)</h4>
-<ul><li>Approved all operational expenditures among 288 vendors and 7 offices</li><li>Custom-built and maintained Access 2007 database to track invoice details, accounts payable, to track flight activity of 7 helicopters in 5 cities.</li><li>Created budget projections for $1 million aviation budget, resulting in 98% accuracy.</li></ul>
+<ul>
+  <li>Approved all operational expenditures among 288 vendors and 7 offices</li>
+  <li>Custom-built and maintained Access 2007 database to track invoice details, accounts payable, to track flight activity of 7 helicopters in 5 cities.</li>
+  <li>Created budget projections for $1 million aviation budget, resulting in 98% accuracy.</li>
+</ul>
+
 <h4>Affiliate Relations, (June 2006 to June 2009.)</h4>
-<ul><li>Communicated daily with 5 broadcast affiliates' news departments and management to coordinate breaking news story coverage</li></ul>
-</secion>
+  <ul>
+    <li>Communicated daily with 5 broadcast affiliates' news departments and management to coordinate breaking news story coverage</li>
+  </ul>
+</section>
 
-
-
-
-<section>
+<section id="education-and-certs">
   <h2>Education and Certifications</h2>
    <ul>
     <li>Bachelor of Arts, International Affairs<a href="http://www.colorado.edu"> University of Colorado at Boulder,</a> <a href="https://www.google.com/maps/place/University+of+Colorado+Boulder/@40.0146619,-105.2937522,13.5z/data=!4m5!3m4!1s0x876bec346a9c1ec1:0x328d5a4a8f431d9!8m2!3d40.007581!4d-105.2659417">  Boulder, CO.</a></li>
@@ -87,8 +117,6 @@ infrastructure.</li><li>Directed the activities of 1 helicopter, 2 pilots and 5 
     </ul>
 </section>
 
-
-  </body>
-
+</body>
 
 </html>
