--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 
 <div id="parallax"></div>
+<body>
+
+<button type="reveal" id="reveal-button">Want to know more?</button>
+
+<div class="resume">
+
 
 <section id="contact-info">
     	<h1>Thomas Johander</h1>
@@ -116,7 +122,9 @@
     <li><a href="http://http://www.toastmasters.org">Toastmasters International, Techmasters chapter, Minneapolis, MN</a></li>
     </ul>
 </section>
-
+</div>
+<script src="jquery-3.1.1.min.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
